--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.11",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@ngrx/store": "^17.2.0",
     "express": "^4.18.2",
+    "firebase": "^10.12.3",
     "primeicons": "^7.0.0",
     "primeng": "~17.18.2",
     "rxjs": "~7.8.0",
